# SkyRide

./: CMakeLists.txt  README.md
Config/: Config.cpp  Config.h
Game/: Game.cpp  Game.h
Game/GameScene/: GameScene.cpp  GameScene.h
Game/GameScene/Player/: Player.cpp  Player.h
Game/MenuScene/: MenuScene.cpp  MenuScene.h
Resources/: Resources.cpp  Resources.h
Scene/: Scene.cpp  Scene.h  Timer.cpp  Timer.h
